  * 2010-12-03 fimex-0.25.1
    * workaround for compiler-bug in gcc < 4
    * upgrading build-infrastructure to automake-1.11
  * 2010-11-18 fimex-0.25
    * reduce memory consumption
    * allow extraction of lat/lon bounding-boxes, time and vertical axes by values
    * fimex usable as OpENDAP client
    * adding a data-subsetter script
    * fixing edge-cases, fetching of 0-size data
    * back-porting to boost 1.32
    * adding standard_parallel for lcc projection
  * 2010-09-13 fimex-0.24
    * grib-support included in debian package
    * adding forecast-reference-time from felt and grib-files
    * use grib-steps to determine valid time
    * using gstmerc istead of tmerc for mercator, requires proj4.4.7
    * fine grained library dependencies
    * bugfix when reading grib index-files
  * 2010-07-15 fimex-0.23
    * allowing axes with negative steps
    * reading units-initialization only once
    * requiring SSE2 on all i386 machines in debian-packages
  * 2010-06-10 fimex-0.22
    * support for transverse mercator and UTM projection
    * support for several standard ellipsoids, e.g. WGS85, NAD83
    * support for other time-units than epoch-seconds from felt-files
    * including examples in fimex-bin debian package
    * best-effort time selection when writing grib-fields without known time
    * fixing typo in rotated latitude longitude projection
    * fixing bug in second extended grid-type method (felt-files)
  * 2010-05-07 fimex-0.21
    * allow data-slicing along any dimension
    * adding abstract coordinate-systems
    * adding abstract projections
    * better coordinate-system support for CF-1.0
    * adding mercator projection
    * allow for units compatible to m in CDMInterpolator
    * simplified and improved build-system
  * 2010-03-09 fimex-0.20 (by M.Eichhorn)
    * porting to Visual C++
    * fixing bugs in lambert-projection
  * 2009-12-18 fimex-0.19
    * debian packages (without grib support)
    * fixing time-interpolator