@@ -84,6 +84,7 @@ private:
     void initVariableNameChange();
     void initVariableTypeChange();
     void initDimensionNameChange();
+    void initDimensionUnlimited();
     void initAttributeNameChange();
     void initAddReassignAttribute();
 
@@ -96,6 +97,9 @@ private:
      */
     std::map<std::string, std::string> variableNameChanges;
     std::map<std::string, CDMDataType> variableTypeChanges;
+    // maps dimension-name to original dimension-name of the
+    // dimensions which changed the unlimited dimension
+    std::map<std::string, std::string> unlimitedDimensionChanges;
 
 
 };
